# tfdiagrams

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: graph.yml  release.yml  workflow.yml
example/count/: .terraform.lock.hcl  main.tf
tests/: test_tfdiagrams.py
tfdiagrams/: generate.py  resources.py
tfdiagrams/console/: __init__.py
