[tool.poetry]
name = "tfdiagrams"
version = "0.2.4"
description = ""
authors = ["Tetsuya Shinone <info@semnil.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydot = "^1.4.2"
diagrams = "^0.23.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
tfdot = "tfdiagrams.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
