[tool.poetry]
name = "tfdiagrams"
version = "0.3.1"
description = ""
authors = ["Tetsuya Shinone <info@semnil.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pydot = "^3.0.0"
diagrams = "^0.23.4"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
tfdot = "tfdiagrams.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
