[tool.poetry]
name = "tfdiagrams"
version = "0.5.0"
description = ""
authors = ["Tetsuya Shinone <info@semnil.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pydot = "^4.0.1"
diagrams = "^0.25.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[tool.poetry.scripts]
tfdot = "tfdiagrams.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
